general explosion shield logic